--- a/lab_5_json.html
+++ b/lab_5_json.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <div class="header">Test JSON page</div>
       <!-- <button class="button" onclick="loadData()">Load Some JSON</button> -->
-      <button class="button" onclick="console.log('You haven\'t written a function yet!');">Click me to replace list entries</button>
+      <button class="button" onclick="myFunction()">Click me to replace list entries</button>
       <div class="content">
         <ul class="instructions">
           <li>Delete and re-clone the class repository</li>
@@ -279,6 +279,22 @@
       { "name": "Zimbabwe", "code": "ZW" }
     ]
     console.log("List of countries in the world", countries);
+  function myFunction() {
+  copy = new Array();
+  for(i = 0; i<51; i++){
+      let j = Math.floor(Math.random()*243);
+      copy.push(countries[j])
+  }
+  console.log(copy)
+  lst = [];
+  for(item in copy)
+    {lst.push(copy[item]['name'])}
+  lst
+
+  for(two in lst){
+    document.getElementsByTagName("ol").innerHTML = lst
+  }
+
   </script>
 </body>
 
