--- a/lab_5.html
+++ b/lab_5.html
@@ -14,18 +14,6 @@
       <button class="button" onclick="myFunction()">Click me to replace list entries</button>
       <div class="content">
         <ul class="instructions">
-          <li>Delete and re-clone the class repository</li>
-          <li>Open <span class="code">lab_5_json.html</span> in your browser</li>
-          <li>Open your developer tools and look at the logged data</li>
-          <li>In your console, write code to:
-            <ol>
-              <li>At the click of the button above</li>
-              <li>Loop through the 'countries' variable</li>
-              <li>Replace this list's entries with country names</li>
-              <li>Now, limit the number of countries listed to fifty</li>
-              <li>Randomize which fifty countries are displayed on load</li>
-            </ol>
-          </li>
         </ul>
       </div>
       <div class="footer"></div>
@@ -279,7 +267,6 @@
       { "name": "Zimbabwe", "code": "ZW" }
     ]
     console.log("List of countries in the world", countries);
-    function myFunction() {
     copy = new Array();
     for(i = 0; i<51; i++){
       let j = Math.floor(Math.random()*243);
@@ -289,11 +276,12 @@
     lst = [];
     for(item in copy)
       {lst.push(copy[item]['name'])}
-    lst
-
-    for(two in lst){
-      document.getElementsByTagName("ol").innerHTML = lst
-    }
+    console.log(lst)
+	  for(x = 0; x<51; x++){
+    let instructions = document.querySelector('.instructions');
+        let el = document.createElement("li");
+        el.innerText = lst[x]
+      instructions.appendChild(el);
     }
   </script>
 </body>
